# aofc2021

./: Day1.hs  Day2.hs  Day3.hs  README.md  aofc2021.cabal  stack.yaml
lib/: ALC.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day1.hs  Day2.hs  Day4.hs  Main.hs
