name:                aofc2021
version:             0.1.0.0
author:              alexdotc
maintainer:          alexdotc
category:            Puzzle
build-type:          Simple
cabal-version:       >=1.10

executable d5
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7
                     , aofc2021

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7
  exposed-modules:     ALC
